# cript_graph

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: PyPI.yml  tests.yml  trunk.yml
.trunk/: trunk.yaml
cript_graph/: __init__.py  core.py
tests/: requirements.txt  test.py  test_functions.py  test_import.py
