[metadata]
name = cript_graph
version = 0.0.0
description = Plugin for CRIPT Python SDK, convert CRIPT graphs to networkx graphs and dot graphs for vizualization.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ludwig Schneider
url = https://github.com/InnocentBug/cript_graph
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
		 networkx
		 #cript>=2
    

